--- a/.github/workflows/durango-ftp-dev.yml
+++ b/.github/workflows/durango-ftp-dev.yml
@@ -10,33 +10,96 @@ jobs:
   winrt-build:
     runs-on: windows-latest
 
+    env:
+      SolutionPath: UniversalFtpServer.sln
+      Platform: x64
+      Configuration: Release
+      AppxBundle: Never
+      PackageOutputRootDir: UniversalFtpServer/appx
+      CERT_FILE: UniversalFtpServer_TemporaryKey.pfx
+      CERT_KEY: ${{ secrets.CERT_KEY }}
+
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
+        
     - name: setup-msbuild
       uses: microsoft/setup-msbuild@v1.0.2
+      
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1
       with:
         nuget-version: latest  
+        
     - name: Get the version
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       shell: bash
+      
     - name: NuGet restore
       run: |
         nuget restore
+        
+    - name: Generate Self-Signed Certificate
+      id: generate_cert
+      run: |
+        $cert = New-SelfSignedCertificate -CertStoreLocation "Cert:\CurrentUser\My" -Subject "CN=MyUWPCert" -KeyAlgorithm RSA -KeyLength 2048 -Provider "Microsoft Enhanced RSA and AES Cryptographic Provider" -KeyExportPolicy Exportable -NotAfter (Get-Date).AddYears(1) -Type CodeSigningCert
+        echo "THUMBPRINT=$($cert.Thumbprint)" >> $env:GITHUB_ENV
+      shell: pwsh
+
     - name: Build project
       run: |
-        msbuild UniversalFtpServer.sln /p:OutputPath=output /p:Platform=x64 /p:Configuration=Release /p:AppxBundlePlatforms="x64" /p:AppxPackageDir="$env:PACKAGE_DIR" /p:AppxBundle=Always /p:UapAppxPackageBuildMode="Sideload" /p:AppxPackageSigningEnabled=true /p:PackageCertificateThumbprint="" /p:PackageCertificateKeyFile="$env:CERT_FILE" /p:PackageCertificatePassword="$env:CERT_KEY"
-      shell: powershell
-      env:
-        PACKAGE_DIR: appx
-        PACKAGE_BUILD_MODE: SideloadOnly
-        CERT_FILE: UniversalFtpServer_TemporaryKey.pfx
-        CERT_KEY: ${{ secrets.CERT_KEY }}
-    - uses: actions/upload-artifact@v2
+        msbuild `
+          "$env:SolutionPath" `
+          /p:OutputPath=output `
+          /p:Platform=$env:Platform `
+          /p:Configuration=$env:Configuration `
+          /p:AppxBundlePlatforms="x64" `
+          /p:AppxPackageDir="$env:PackageOutputRootDir" `
+          /p:AppxBundle=$env:AppxBundle `
+          /p:UapAppxPackageBuildMode="Sideload" `
+          /p:AppxPackageSigningEnabled=true `
+          /p:PackageCertificateThumbprint="${{ env.THUMBPRINT }}" `
+          /p:PackageCertificateKeyFile="$env:CERT_FILE" `
+          /p:PackageCertificatePassword="$env:CERT_KEY"
+      shell: pwsh
+
+    - name: Clean the Package
+      run: |
+        $PackagePath = "${{ env.PackageOutputRootDir }}"
+        if (Test-Path $PackagePath) {
+          Write-Host "Cleaning package directory: $PackagePath"
+          Remove-Item -Recurse -path "$PackagePath\Add-AppDevPackage.resources" -ErrorAction SilentlyContinue
+          Remove-Item -Recurse -path "$PackagePath\TelemetryDependencies" -ErrorAction SilentlyContinue
+          Remove-Item -Recurse -path "$PackagePath\Dependencies\arm" -ErrorAction SilentlyContinue
+          Remove-Item -Recurse -path "$PackagePath\Dependencies\arm64" -ErrorAction SilentlyContinue
+          Remove-Item -Recurse -path "$PackagePath\Dependencies\x86" -ErrorAction SilentlyContinue
+          Remove-Item -Recurse -path "$PackagePath\Dependencies\Win32" -ErrorAction SilentlyContinue
+          Remove-Item -path "$PackagePath\Add-AppDevPackage.ps1" -ErrorAction SilentlyContinue
+          Remove-Item -Recurse -path "$PackagePath\Install.ps1" -ErrorAction SilentlyContinue
+        } else {
+          Write-Host "Package path does not exist: $PackagePath"
+          exit 1
+        }
+      shell: pwsh
+
+    - name: Create Archive
+      run: |
+        $PackagePath = "${{ env.PackageOutputRootDir }}"
+        if (Test-Path $PackagePath) {
+          Write-Host "Creating archive for: $PackagePath"
+          Compress-Archive -Path "$PackagePath\*" -DestinationPath "${{ env.PackageOutputRootDir }}\DURANGO-FTP-Release.zip"
+          Write-Host "Contents of package output directory after archiving:"
+          Get-ChildItem -Path "${{ env.PackageOutputRootDir }}" -Recurse
+        } else {
+          Write-Host "Package path does not exist for archiving: $PackagePath"
+          exit 1
+        }
+      shell: pwsh
+
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4.3.4
       with:
         name: DURANGO-FTP-Release
-        path: UniversalFtpServer/appx/*
+        path: ${{ env.PackageOutputRootDir }}\DURANGO-FTP-Release.zip
