--- a/.github/workflows/durango-ftp-dev.yml
+++ b/.github/workflows/durango-ftp-dev.yml
@@ -42,9 +42,9 @@ jobs:
     - name: Generate Self-Signed Certificate
       id: generate_cert
       run: |
-        $cert = New-SelfSignedCertificate -CertStoreLocation "Cert:\CurrentUser\My" -Subject "CN=MyUWPCert" -KeyAlgorithm RSA -KeyLength 2048 -Provider "Microsoft Enhanced RSA and AES Cryptographic Provider" -KeyExportPolicy Exportable -NotAfter (Get-Date).AddYears(1) -Type CodeSigningCert
-        echo "THUMBPRINT=$($cert.Thumbprint)" >> $GITHUB_ENV
-      shell: powershell
+       $cert = New-SelfSignedCertificate -CertStoreLocation "Cert:\CurrentUser\My" -Subject "CN=MyUWPCert" -KeyAlgorithm RSA -KeyLength 2048 -Provider "Microsoft Enhanced RSA and AES Cryptographic Provider" -KeyExportPolicy Exportable -NotAfter (Get-Date).AddYears(1) -Type CodeSigningCert
+       echo "THUMBPRINT=$($cert.Thumbprint)" >> $env:GITHUB_ENV
+      shell: pwsh
 
     - name: Build project
       run: |
